Added Barebones HTML Layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Home - Jacob's Web Page</title>
+</head>
+<body>
+	<h1>This is Jacob's webpage</h1>
+	<h2>for his 1st co-op term</h2>
+
+</body>
+</html>
