--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Jacob Haig</span>
       <span class="d-none d-lg-block">
+        <!-- NOTE: image file descriptor is case-sensitive(ie. 'JPG' needed below) -->
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./img/profile.JPG" alt="">
       </span>
     </a>
@@ -91,7 +92,8 @@
           <div class="resume-content">
             <h3 class="mb-0">Software Developer Co-op</h3>
             <div class="subheading mb-3">NCR Waterloo</div>
-            <p>example text example text example text Hi Gillian example text example text</p>
+            <img class="img-fluid mx-auto mb-2 " src="./img/NCRLogo.jpg" alt="">
+            <p>This was my first co-op term, started at the end of my 2nd year. <a href="./NCR.html">More</a></p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2019 - Present</span>
