Add page on NCR work term (WIP)

--- a/NCR.html
+++ b/NCR.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Jacob Haig - Computer Science</title>
+  <title>Jacob Haig - NCR</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -49,7 +49,7 @@
           <a class="nav-link js-scroll-trigger" href="#challenges">Challenges</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          <a class="nav-link js-scroll-trigger" href="#goals">Goals</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#overview">Overview</a>
@@ -85,6 +85,43 @@
     </section>
 
     <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="tech">
+      <div class ="w-100">
+        <h2 class="mb-5">Tech Stack</h2>
+        <p>The position advertised Java as a primary language needed for the role. Java formed the backbone of the application being developed and ran the test suites; the majority of my work was done in a domain-specific language (DSL) based on YAML files.</p>
+        <img class="img-fluid mx-auto mb-2 " src="./img/YAML_example.png" alt="">
+        <!-- TODO: file challenges comments under 'Challenges' -->
+        
+        <!-- <p>Working in a domain-specific language has its own set of challenges different from those found in more widespread languages. Documentation and implementation are limited to homegrown examples; you can't 'Google' a solution to a problem and expect to find a comprehensive answer. </p> -->
+        <p>Testing was done using Cucumber: a testing framework that connects test functions to statements written in regular English. </p>
+        <p>Cucumber test statements were connected to Java functions that performed the tests.</p>
+        <!-- TODO: why do I have this as a svg??!? -->
+        <img class="img-fluid mx-auto mb-2 " src="./img/GHERKIN_example.svg" alt="">
+        <p></p>
+        <p>Databases such as Cassandra, Redis and Elasticsearch were used to store application data.</p>
+
+      </div>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="challenges">
+      <div class="w-100">
+        <h2 class="mb-5">Challenges</h2>
+        <p>Working in a domain-specific language has its own set of challenges different from those found in more widespread languages. Documentation and implementation are limited to homegrown examples; you can't 'Google' a solution to a problem and expect to find a comprehensive answer. </p> 
+      </div>
+      <!-- WORK IN PROGRESS -->
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="goals">
+      <div class="w-100">
+        <h2 class="mb-5">Goals</h2>
+        <div id="goalAnswer">
+          <h4><i>Goal 1:</i> <b>Get comfortable with the Agile Development process</b> </h4>
+          <p>This is still a work in progress...</p>
+        </div>
+          
+      </div>  
+    </section>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
