Update homepage with more details + images

--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
         <h1 class="mb-0">Jacob
           <span class="text-primary">Haig</span>
         </h1>
-        <div class="subheading mb-5">Waterloo, CAN · 
+        <div class="subheading mb-5">Guelph, CAN · 
           <a href="mailto:name@email.com">jhaig343@email.com</a>
         </div>
-        <p class="lead mb-5">lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+        <p class="lead mb-5">Hey there! I am a Computer Science student at the University of Guelph in Guelph, ON Canada. This page will be used to say a little bit about myself and my expertise, and to describe my experiences both in school and on co-op work terms. </p>
         <div class="social-icons">
           <a href="https://github.com/JHaig343">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/jhaig343">
             <i class="fab fa-twitter"></i>
           </a>
         </div>
@@ -111,27 +111,7 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
-          </div>
-        </div> -->
+        -->
 
       </div>
 
@@ -148,7 +128,8 @@
             <h3 class="mb-0">University of Guelph</h3>
             <div class="subheading mb-3">Bachelor of Computing</div>
             <div>Computer Science - Co-op</div>
-            <p>GPA: 3.9</p>
+            <p>GPA: 3.9 <br></p>
+            <p><b>Classes: </b> Data Structures, Algorithms, Object-Oriented Programming, Microprocessors, Development + Integration
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2017 - Present</span>
@@ -193,20 +174,23 @@
         </ul>
 
         <div class="subheading mb-3">Workflow</div>
-        <!-- <ul class="fa-ul mb-0">
+        <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Agile Development &amp; Scrum</li> 
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            Docker containers orchestrated via Kubernetes
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            RESTful API Development
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul> -->
+            Test-Driven Development in an Enterprise environment
+          </li>
+        </ul>
       </div>
     </section>
 
@@ -215,8 +199,12 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>I like waffles.</p>
-        <p class="mb-0">And pancakes too.</p>
+        <p>In addition to my love of programming and all things digital, I am also a 2nd degree black belt in Taekwondo, having practiced for over 10 years. </p>
+        <p>I enjoy music from all kinds of genres; from classical to EDM, if it "clicks" with me I'll probably have it on repeat. Some of my current favourite bands are Kaleo, Shinedown and Nothing but Thieves.</p>
+        <p>I attempted to learn Russian at some point in time but now I'm hiding from Duolingo.</p>
+
+        <p class="mb-0">I like waffles. And pancakes too.</p>
+        <img class="img-fluid mx-auto mb-2 " src="./img/berries-blur-cream-378008.jpg" alt="">
       </div>
     </section>
 
@@ -228,7 +216,12 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <i>Dusty trophy cabinet...</i>  </li>
+            <i>University of Guelph Dean's Honors List: 2017-2019</i>  
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <i>University of Guelph Entrance Scholarship</i>
+          </li>
           <!-- <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Mobile Web Specialist - Google Certification</li>
