--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <h1 class="mb-0">Jacob
           <span class="text-primary">Haig</span>
         </h1>
-        <div class="subheading mb-5">Guelph, CAN · 
-          <a href="mailto:name@email.com">jhaig343@email.com</a>
+        <div class="subheading mb-5">Guelph, ON · 
+          <a href="mailto:jhaig343@gmail.com">jhaig343@gmail.com</a>
         </div>
         <p class="lead mb-5">Hey there! I am a Computer Science student at the University of Guelph in Guelph, ON Canada. This page will be used to say a little bit about myself and my expertise, and to describe my experiences both in school and on co-op work terms. </p>
         <div class="social-icons">
@@ -139,6 +139,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Huron Park Secondary School</h3>
+            <div class="subheading mb-3">Woodstock, ON Canada</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2013 - June 2017</span>
@@ -163,13 +164,31 @@
             <i class="fab fa-java"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-git"></i>
+            <i class="fab fa-git-alt"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-linux"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-node-js"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab - fa-html5"></i>
+          </li>
+          <li class="list-inline-item">
+              <i class="fab fa-docker"></i>
+          </li>
+          <li class="list-inline-item">
+              <i class="fab fa-windows"></i>
+          </li>
+          <li class="list-inline-item">
+              <i class="fab fa-atlassian"></i>
+          </li> 
+          <li class="list-inline-item">
+              <i class="fab fa-slack"></i>
+          </li>
+          <li class="list-inline-item">
+              <i class="fab fa-ubuntu"></i>
           </li>
         </ul>
 
@@ -205,6 +224,7 @@
 
         <p class="mb-0">I like waffles. And pancakes too.</p>
         <img class="img-fluid mx-auto mb-2 " src="./img/berries-blur-cream-378008.jpg" alt="">
+          <img class="img-fluid mx-auto mb-2" src="img/berries-blueberry-brown-718739.jpg" alt="">
       </div>
     </section>
 
@@ -221,6 +241,10 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <i>University of Guelph Entrance Scholarship</i>
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <i>Cargill Scholarship</i>
           </li>
           <!-- <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
