Remove outdated Twitter link

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
         <div class="subheading mb-5">Guelph, ON · 
           <a href="mailto:jhaig343@gmail.com">jhaig343@gmail.com</a>
         </div>
-        <p class="lead mb-5">Hey there! I am a Computer Science student at the University of Guelph in Guelph, ON Canada. This page will be used to say a little bit about myself and my expertise, and to describe my experiences both in school and on co-op work terms. </p>
+        <p class="lead mb-5">Hey there! I am a Computer Science student at the University of Guelph in Ontario, Canada. This page will be used to say a little bit about myself and my expertise, and to describe my experiences both in school and on co-op work terms. </p>
         <div class="social-icons">
           <a href="https://github.com/JHaig343">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://twitter.com/jhaig343">
+          <!-- <a href="https://twitter.com/jhaig343">
             <i class="fab fa-twitter"></i>
-          </a>
+          </a> -->
         </div>
       </div>
     </section>
