--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
             <h3 class="mb-0">Software Developer Co-op</h3>
             <div class="subheading mb-3">NCR Waterloo</div>
             <img class="img-fluid mx-auto mb-2 " src="./img/NCRLogo.jpg" alt="">
-            <p>This was my first co-op term, started at the end of my 2nd year. <a href="./404.html">More</a></p>
+            <p>This was my first co-op term, started at the end of my 2nd year.</p> 
+            <a href="./404.html" class="subheading mb-3">More</a></p> 
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2019 - Present</span>
