--- a/NCR.html
+++ b/NCR.html
@@ -68,7 +68,6 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="ncr-work-term">
       <div class="w-100">
         <h2 class="mb-5">NCR Work Term</h2>
-
         <p>NCR is an American-based financial technology company with headquarters in Atlanta, but with offices in many countries around the world such as the one in Waterloo. Originally known for developing some of the first mechanical cash registers (NCR being an acronym for National Cash Register), NCR has been at the forefront of advances in the financial technology sphere. If you've used a point-of-sale(POS) machine or a self-serve kiosk at a restaurant, chances are it was made by NCR. NCR also has invested in the financial software industry, which is the department I was working in.</p>
 
       <h3>Role: Software Developer</h3>
@@ -109,7 +108,7 @@
 
         <p>As my Computer Science major did not have a group project class yet(there is one in 3rd year, and the sister Software Engineering major has multiple), this was my first experience with enterprise-scale team software development. It could be a challenge to communicate with different teams on a shared project, especially when the teams have other issues on the burner as well.</p> 
         <!-- What are you looking at? shoo! -->
-        <img class="img-fluid mx-auto mb-2" src="./img/bookcover.jpg" alt="Everyone does it, admit it.">
+        <img class="img-fluid mx-auto mb-2" src="./img/bookcover.jpg" title="Everyone's done it, admit it.">
 
         <p>There's a level of unpredictability that also goes beyond what you would get in academia. While dealing with the regular unexpected complexity creep and redesigning that can come with regular development, In the workplace you can get customer requests or urgent bug fixes that require sidelining your current plans. In school you rarely need to touch a project after the assignment is over, much less provide a bug fix on short notice - and class schedules don't change often without the classes' permission.</p>
       </div>
@@ -125,23 +124,30 @@
           <h4><i>Goal 1:</i> <b>Get comfortable with the Agile Development process</b> </h4>
           <p>Coming in to this work term I had no experience in an Agile development environment - I had an idea of what the foundational concepts were but no experience operating in that environment.</p>
           <p> Our work was organized into 2-week sprints. Every workday would have a standup meeting - a 10 minute meeting where each member of the team would say what they were working on and what was blocking them, if any. We would also have meetings to plan upcoming sprints and retrospectives - discussions on what went well/badly last sprint and how we could improve in the future. 
-          Agile development is a widespread methodology in the industry and I consider this to be tremendously valuable experience to bring forward in my career.
-          </p>
+          Agile development is a widespread methodology in the industry and I consider this to be tremendously valuable experience to bring forward in my career.<br></p>
+          <p> Looking back halfway through the work term, I consider this goal to be accomplished as I came out from this work term with a concrete understanding of what are Agile processes are both in theory and in practice.</p>
         </div>
         <div class="goalAnswer">
           <h4><i>Goal 2:</i> <b>Learn how to build and maintain Kubernetes applications</b></h4>
-          <p></p><br>
+          <p>I made this goal halfway through my work term once I had gained more confidence and knowledge about my current role. I had already set up and been maintaining a Kubernetes cluster for development; I wanted to get experience in designing and creating the clusters in addition to maintaining them.</p><br>
+          <p>Kubernetes as a system is actually pretty straightforward. It's all about working with pods, which are a collection of containers(Docker or otherwise) grouped together as a logical unit that performs a specific task. These pods are run on nodes, which are physical or virtual machines acting as hosts for these container groups. Multiple nodes, controlled and organized by a master node, make up a Kubernetes cluster. There are also other concepts such as deployments, essentially reusable blueprints and configurations for building pods, which allows identical duplicate pods to be spun up or shut down when needed.</p>
+          <img class="img-fluid mx-auto mb-2" src="img/docker-diagram.jpeg" title="a good diagram for a basic, one-node Kubernetes cluster">
+          <p></p>
         </div>
         <div class="goalAnswer">
           <h4><i>Goal 3:</i> <b>Get comfortable with the Git development process</b></h4>
             <p>I had previous experience with Git in university, but that was limited to basic operations on a single repository with a single user(me). Working with multiple large Git repositories, with over 2 dozen developers working and making changes simultaneously, is an entirely different experience and a situation that is commonplace in the industry.</p><br>
 
-            <img class="img-fluid mx-auto mb-2" src="https://imgs.xkcd.com/comics/git.png" alt="">
+            <img class="img-fluid mx-auto mb-2" src="https://imgs.xkcd.com/comics/git.png" title="I still don't trust myself to use rebase">
             
-            <p>By the end of the work term I was completely comfortable with the regular Git workflow(fork, make changes, pull request, merge). I had also gained familiarity
-              with more one off operations, like setting a separate repository as a remote for a fork. I will say that the number of different operations you can do in Git only seems to grow as I learn more about it!
+            <p>By midway through the work term I was completely comfortable with the regular Git workflow(fork, make changes, pull request, merge). I had also gained familiarity
+              with more one off operations, like setting a separate repository as a remote for a fork. I consider this goal to be achieved. I will say that the number of different operations you can do in Git only seems to grow as I learn more about it!
             </p><br>
             <!-- <p>My experience with Git was built up from just going through a regular workflow; The routine steps of development become ingrained through repetition, and you also get experience with more obscure functionality when dealing special circumstances along that workflow. By the end of the co-op term I felt more well-versed in the Git workflow then before.</p> -->
+        </div>
+        <div class="goalAnswer">
+          <h4><i>Goal 4:</i> <b>Improve my technical communications skills</b></h4>
+          <p>A goal created midway through the work term, as I recognized I had a weakness in efficiently explaining technical situations and the reasoning behind some of my code changes. I often went into too much detail or didn't use concise terminology for explaining code, which made getting my idea across take much longer than it should have. Improving this has become a priority for me - The importance of being able to effectively communicate with your co-workers on issues can't be overstated.</p><br>
         </div>
       </div>  
     </section>
@@ -170,6 +176,7 @@
       <div class="w-100">
         <h2 class="mb-5">Conclusion</h2>
         <h4>A conclusion will be written here once my work term has ended.</h4>
+        <!-- <p>Overall this work term has been an eye-opening experience for me in terms of discovering not only how software development works in the workplace, but how my skills translate to the workplace as well.</p> -->
       </div>
     </section>
 
