Improve Challenges section and add new Goals
- Challenges section improved; added takeaway lessons from main challenges
- Added Goals for the Fall 2019 term

--- a/NCR.html
+++ b/NCR.html
@@ -103,14 +103,15 @@
       <div class="w-100">
         <h2 class="mb-5">Challenges</h2>
         <p>One of the biggest things to adjust to when working with a large codebase developed by multiple teams is the sheer number of interconnected, moving parts. While the goal would be to have individual, modular parts working together as a whole, reality is not as neatly divided. Seemingly minor, unrelated changes to one part of the codebase can have cascading effects that cause another part to break and can take a long time to debug.</p>
+        <!-- What are you looking at? shoo! -->
+        <img class="img-fluid mx-auto mb-2" src="./img/We-Bare-Bears.gif" title="Same situation, just instead of cute bears you have production-breaking bugs.">
         <p>Attempting to tackle an issue with the 'code first, look later' approach is doomed to failure as you will inevitably miss a detail that will require rewriting some or all of the code. Thoroughly understanding the problem before writing code is an idea often emphasized, but only understood once it becomes vital to developing with any form of efficiency.</p>
         <br>
         <p>As my Computer Science major did not have a group project class yet(there is one in 3rd year, and the sister Software Engineering major has multiple), this was my first experience with enterprise-scale team software development. It could be a challenge to communicate with different teams on a shared project, especially when the teams have other issues on the burner as well.</p> 
-        <!-- What are you looking at? shoo! -->
-        <img class="img-fluid mx-auto mb-2" src="./img/bookcover.jpg" title="Everyone's done it, admit it.">
-
+        
         <p>I've realized that requiring pull requests to a master codebase, mandatory code reviews, Agile meetings and planning - all of it is to facilitate the operation of large development teams. WIthout some sort of plan any team effort larger than a few people will just collapse from communication issues.</p>
-        <p>There's a level of unpredictability that also goes beyond what you would get in academia. While dealing with the regular unexpected complexity creep and redesigning that can come with regular development, In the workplace you can get customer requests or urgent bug fixes that require sidelining your current plans. In school you rarely need to touch a project after the assignment is over, much less provide a bug fix on short notice - and class schedules don't change often without the classes' permission.</p>
+        <img class="img-fluid mx-auto mb-2" src="https://imgs.xkcd.com/comics/communication.png" title="XKCD speaks to my soul.">
+        <p>There's also a level of unpredictability that also goes beyond what you would get in academia. While dealing with the regular unexpected complexity creep and redesigning that can come with regular development, In the workplace you can get customer requests or urgent bug fixes that require sidelining your current plans. In school you rarely need to touch a project after the assignment is over, much less provide a bug fix on short notice - and class schedules don't change often without the classes' permission.</p>
       </div>
       
     </section>
@@ -149,7 +150,7 @@
           <p>A goal created midway through the work term, as I recognized I had a weakness in efficiently explaining technical situations and the reasoning behind some of my code changes. I often went into too much detail or didn't use concise terminology for explaining code, which made getting my idea across take much longer than it should have. Improving this has become a priority for me - The importance of being able to effectively communicate with your co-workers on issues can't be overstated.</p><br>
         </div>
         <div class="goalAnswer">
-          <h4><i>Goal 5: Become familiar with Agile Development tools</i></h4>
+          <h4><i>Goal 5:</i> Become familiar with Agile Development tools</h4>
           <p>This goal was made at the start of my work term, before I had experience in Agile development. I had the idea that there were many specialized tools used in the Agile development. We did use Jira, which is a a combination of issue tracker and planning board. Beyond that though there were no tools we used that required specific training. I consider this goal technically achieved but would have made another goal had I known more about Agile development.</p>
         </div>
       </div>  
