Fleshing out goals + adding to conclusion

--- a/NCR.html
+++ b/NCR.html
@@ -137,7 +137,7 @@
         </div>
         <div class="goalAnswer">
           <h4><i>Goal 3:</i> <b>Get comfortable with the Git development process</b></h4>
-            <p>I had previous experience with Git in university, but that was limited to basic operations on a single repository with a single user(me). Working with multiple large Git repositories, with over 2 dozen developers working and making changes simultaneously, is an entirely different experience and a situation that is commonplace in the industry.</p><br>
+            <p>I had previous experience with Git in university, but that was limited to basic operations on a single repository with a single user (me). Working with multiple large Git repositories, with over 2 dozen developers working and making changes simultaneously, is an entirely different experience and a situation that is commonplace in the industry.</p><br>
 
             <img class="img-fluid mx-auto mb-2" src="https://imgs.xkcd.com/comics/git.png" title="I still don't trust myself to use rebase">
             
@@ -148,6 +148,8 @@
         <div class="goalAnswer">
           <h4><i>Goal 4:</i> <b>Improve my technical communications skills</b></h4>
           <p>A goal created midway through the work term, as I recognized I had a weakness in efficiently explaining technical situations and the reasoning behind some of my code changes. I often went into too much detail or didn't use concise terminology for explaining code, which made getting my idea across take much longer than it should have. Improving this has become a priority for me - The importance of being able to effectively communicate with your co-workers on issues can't be overstated.</p><br>
+          
+          <p>Around this time a new co-op student joined my team - I considered this the perfect opportunity to work on technical communication.</p>
         </div>
         <div class="goalAnswer">
           <h4><i>Goal 5:</i> Become familiar with Agile Development tools</h4>
@@ -179,9 +181,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="conclusion">
       <div class="w-100">
         <h2 class="mb-5">Conclusion</h2>
-        <h4>A conclusion will be written here once my work term has ended.</h4>
+        <!-- <h4>A conclusion will be written here once my work term has ended.</h4> -->
         <p>Overall this work term has been an eye-opening experience for me in terms of discovering not only how software development works in the workplace, but how my skills translate to the workplace as well.</p><br>
-        <p>There were a couple of big takeaways i got from the past 8 months. Collaboration and communication skills are essential. When working on a new task or issue, thoroughly researching and understanding the problem is way more effective than blindly jumping into code. Last but not least, having an efficient and organized infrastructure and workflow is vital for any large-scale development.</p><br>
+        <p>There were a couple of big takeaways I got from the past 8 months. Collaboration and communication skills are essential. When working on a new task or issue, thoroughly researching and understanding the problem is way more effective than blindly jumping into code. Last but not least, having an efficient and organized infrastructure and workflow is vital for any large-scale development.</p><br>
       </div>
     </section>
 
