Add leftmost bar + more detail in my goals section

--- a/NCR.html
+++ b/NCR.html
@@ -61,19 +61,20 @@
     </div>
   </nav>
 
-  <hr class="m-0">
+    <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="ncr-work-term">
       <div class="w-100">
+        <!-- TODO: rewrite - with new spacing flow is clunky -->
         <h2 class="mb-5">NCR Work Term</h2>
         <p>NCR is an American-based financial technology company with headquarters in Atlanta, but with offices in many countries around the world such as the one in Waterloo. Originally known for developing some of the first mechanical cash registers (NCR being an acronym for National Cash Register), NCR has been at the forefront of advances in the financial technology sphere. If you've used a point-of-sale(POS) machine or a self-serve kiosk at a restaurant, chances are it was made by NCR. NCR also has invested in the financial software industry, which is the department I was working in.</p>
 
       <h3>Role: Software Developer</h3>
-      <p>My role encompassed all aspects of working with the project codebase. This included development of new features, testing of implemented code and design and planning of upcoming development. </p>
-      <p>I was on one of multiple Agile Scrum development teams working on an upcoming software project. I joined partway through development of this project, and needed to get up to speed on what progress had been made and what needed to be done next.</p>
+      <p>My role encompassed all aspects of working with the project codebase. This included development of new features, testing of implemented code and design and planning of upcoming development. 
+      I was on one of multiple Agile Scrum development teams working on an upcoming software project. I joined partway through development of this project, and needed to get up to speed on what progress had been made and what needed to be done next.</p>
 
       <p>Initial setup of my development environment took about a week, after which I began working on issues and feature development. Development was in 2-week sprints, with standups and retrospectives a regular part of the daily routine.</p>
-      <br>
+
       <p>About 4 months in to the work term the existing co-op on my team left and a new co-op took his place; I became the senior co-op of the team, responsible for 'showing the ropes' and getting the new co-op student up to speed.</p>
       <p>I appreciate the integration of testing as one of the developer's main duties - While it might be extra work, having an understanding of how tests are built and what needs to be tested is invaluable in learning how to be a better developer.</p>
       </div>
@@ -98,13 +99,12 @@
     </section>
 
     <hr class="m-0">
-    <!-- WORK IN PROGRESS -->
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="challenges">
       <div class="w-100">
         <h2 class="mb-5">Challenges</h2>
         <p>One of the biggest things to adjust to when working with a large codebase developed by multiple teams is the sheer number of interconnected, moving parts. While the goal would be to have individual, modular parts working together as a whole, reality is not as neatly divided. Seemingly minor, unrelated changes to one part of the codebase can have cascading effects that cause another part to break and can take a long time to debug.</p>
         <!-- What are you looking at? shoo! -->
-        <img class="img-fluid mx-auto mb-2" src="./img/We-Bare-Bears.gif" title="Same situation, just instead of cute bears you have production-breaking bugs.">
+        <img class="img-fluid mx-auto mb-2" src="./img/We-Bare-Bears.gif" title="Same situation, just instead of cute bears you have test-breaking bugs.">
         <p>Attempting to tackle an issue with the 'code first, look later' approach is doomed to failure as you will inevitably miss a detail that will require rewriting some or all of the code. Thoroughly understanding the problem before writing code is an idea often emphasized, but only understood once it becomes vital to developing with any form of efficiency.</p>
         <br>
         <p>As my Computer Science major did not have a group project class yet(there is one in 3rd year, and the sister Software Engineering major has multiple), this was my first experience with enterprise-scale team software development. It could be a challenge to communicate with different teams on a shared project, especially when the teams have other issues on the burner as well.</p> 
@@ -149,7 +149,8 @@
           <h4><i>Goal 4:</i> <b>Improve my technical communications skills</b></h4>
           <p>A goal created midway through the work term, as I recognized I had a weakness in efficiently explaining technical situations and the reasoning behind some of my code changes. I often went into too much detail or didn't use concise terminology for explaining code, which made getting my idea across take much longer than it should have. Improving this has become a priority for me - The importance of being able to effectively communicate with your co-workers on issues can't be overstated.</p><br>
           
-          <p>Around this time a new co-op student joined my team - I considered this the perfect opportunity to work on technical communication.</p>
+          <p>Around this time a new co-op student joined my team - I considered this the perfect opportunity to work on technical communication. Explaining a concept to someone without the background experience is an excellent way to test your understanding and find areas in which you can improve.</p> <br>
+          <p></p>
         </div>
         <div class="goalAnswer">
           <h4><i>Goal 5:</i> Become familiar with Agile Development tools</h4>
@@ -166,14 +167,14 @@
         <p>At the end of July NCR ran a global 2-day hackathon to develop new ideas for prizes. I partnered with 3 other-co-op
           students at the Waterloo office to work outside of our normal responsibilities. We ended up developing a kiosk-type app
           based on facial recognition, using React Native and Microsoft Azure services. Our project ended up making it to the global finals
-          among 10 other entrants.<br>
-          This was my first true hackathon and I really enjoyed it! It was definitely challenging getting a complete package done in a 2-day period.
+          among 10 other entrants.</p><br>
+          <p>This was my first true hackathon and I really enjoyed it! It was definitely challenging getting a complete package done in a 2-day period.
           I will be on the lookout for more hackathons in the future!
         </p>
       </div>
     </section>
 
-    <hr class="m-0">
+    <!-- <hr class="m-0"> -->
 
 
     <hr class="m-0">
@@ -181,14 +182,15 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="conclusion">
       <div class="w-100">
         <h2 class="mb-5">Conclusion</h2>
-        <!-- <h4>A conclusion will be written here once my work term has ended.</h4> -->
-        <p>Overall this work term has been an eye-opening experience for me in terms of discovering not only how software development works in the workplace, but how my skills translate to the workplace as well.</p><br>
         <p>There were a couple of big takeaways I got from the past 8 months. Collaboration and communication skills are essential. When working on a new task or issue, thoroughly researching and understanding the problem is way more effective than blindly jumping into code. Last but not least, having an efficient and organized infrastructure and workflow is vital for any large-scale development.</p><br>
+        <p>Overall this work term has been an eye-opening experience for me in terms of discovering not only how software development works in the workplace, but how my skills translate to the workplace as well. The working experience in tech like Docker and Kubernetes is very valuable going forward.</p><br>
       </div>
     </section>
 
     <hr class="m-0">
 
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="rightBar"></nav>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
