add a statement on communication goal

--- a/NCR.html
+++ b/NCR.html
@@ -150,7 +150,7 @@
           <p>A goal created midway through the work term, as I recognized I had a weakness in efficiently explaining technical situations and the reasoning behind some of my code changes. I often went into too much detail or didn't use concise terminology for explaining code, which made getting my idea across take much longer than it should have. Improving this has become a priority for me - The importance of being able to effectively communicate with your co-workers on issues can't be overstated.</p><br>
           
           <p>Around this time a new co-op student joined my team - I considered this the perfect opportunity to work on technical communication. Explaining a concept to someone without the background experience is an excellent way to test your understanding and find areas in which you can improve.</p> <br>
-          <p></p>
+          <p>I didn't expect to be able to call this goal fully complete - improving is a continuous process. I do feel however that I hsve made progress on that this work term.</p>
         </div>
         <div class="goalAnswer">
           <h4><i>Goal 5:</i> Become familiar with Agile Development tools</h4>
