Add information on tech stack used

--- a/NCR.html
+++ b/NCR.html
@@ -94,7 +94,7 @@
         <p></p>
         <p>Databases such as Cassandra, Redis and Elasticsearch were used to store application data. Continuous Integration(CI) software was used to test builds when new code was merged.</p>
 
-        <p>Docker and Kubernetes were also used as part of the project infrastructure.</p>
+        <p>Docker and Kubernetes were also used as part of the project infrastructure, forming the backbone of the project's microservice-based architecture. I had a single-node cluster that I used for development and testing.</p>
       </div>
     </section>
 
