--- a/NCR.html
+++ b/NCR.html
@@ -109,9 +109,9 @@
         <br>
         <p>As my Computer Science major did not have a group project class yet(there is one in 3rd year, and the sister Software Engineering major has multiple), this was my first experience with enterprise-scale team software development. It could be a challenge to communicate with different teams on a shared project, especially when the teams have other issues on the burner as well.</p> 
         
-        <p>I've realized that requiring pull requests to a master codebase, mandatory code reviews, Agile meetings and planning - all of it is to facilitate the operation of large development teams. WIthout some sort of plan any team effort larger than a few people will just collapse from communication issues.</p>
+        <p>I've realized that requiring pull requests to a master codebase, mandatory code reviews, Agile meetings and planning - all of it is to facilitate the operation of large development teams. Without some sort of plan any team effort larger than a few people will just collapse from communication issues.</p>
         <img class="img-fluid mx-auto mb-2" src="https://imgs.xkcd.com/comics/communication.png" title="XKCD speaks to my soul.">
-        <p>There's also a level of unpredictability that also goes beyond what you would get in academia. While dealing with the regular unexpected complexity creep and redesigning that can come with regular development, In the workplace you can get customer requests or urgent bug fixes that require sidelining your current plans. In school you rarely need to touch a project after the assignment is over, much less provide a bug fix on short notice - and class schedules don't change often without the classes' permission.</p>
+        <p>There's also a level of unpredictability that also goes beyond what you would get in academia. While dealing with the regular unexpected complexity creep and redesigning that can come with regular development, in the workplace you can get customer requests or urgent bug fixes that require sidelining your current plans. In school you rarely need to touch a project after the assignment is over, much less provide a bug fix on short notice - and class schedules don't change often without the classes' permission.</p>
       </div>
       
     </section>
@@ -166,8 +166,7 @@
         <h2 class="mb-5">NCR Global Hackathon</h2>
         <p>At the end of July NCR ran a global 2-day hackathon to develop new ideas for prizes. I partnered with 3 other-co-op
           students at the Waterloo office to work outside of our normal responsibilities. We ended up developing a kiosk-type app
-          based on facial recognition, using React Native and Microsoft Azure services. Our project ended up making it to the global finals
-          among 10 other entrants.</p><br>
+          based on facial recognition, using React Native and Microsoft Azure services. Our project ended up making it to the global finals among 10 other entrants.</p><br>
           <p>This was my first true hackathon and I really enjoyed it! It was definitely challenging getting a complete package done in a 2-day period.
           I will be on the lookout for more hackathons in the future!
         </p>
