Edit 404 page to mention page under construction

--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>404 - Page Not Found</title>
+	<title>404 - Page Under Construction</title>
 </head>
 <body>
-	<h2>Sorry! Page was not found.</h2>
+	<h2>Sorry! Page hasn't been completed yet. Check back in a bit!</h2>
 </body>
 </html>
