add images for tech used in hackathon

--- a/NCR.html
+++ b/NCR.html
@@ -173,6 +173,8 @@
           <p>This was my first true hackathon and I really enjoyed it! It was definitely challenging getting a complete package done in a 2-day period.
           I will be on the lookout for more hackathons in the future!
         </p>
+        <img class="img-fluid mx-auto mb-2" src="./img/face-api.png" title="Azure Face API">
+        <img class="img-fluid mx-auto mb-2" src="./img/react.png" title="React Native">        
       </div>
     </section>
 
