add acknowledgement to conclusion

--- a/NCR.html
+++ b/NCR.html
@@ -187,7 +187,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="conclusion">
       <div class="w-100">
         <h2 class="mb-5">Conclusion</h2>
-        <p>There were a couple of big takeaways I got from the past 8 months. Collaboration and communication skills are essential. When working on a new task or issue, thoroughly researching and understanding the problem is way more effective than blindly jumping into code. Last but not least, having an efficient and organized infrastructure and workflow is vital for any large-scale development.</p><br>
+        <p>There were a couple of big takeaways I got from the past 8 months. Collaboration and communication skills are essential. When working on a new task or issue, thoroughly researching and understanding the problem is way more effective than blindly jumping into code. Last but not least, having an efficient and organized infrastructure and workflow is vital for any large-scale development.</p>
+        <p>I would like to thank my team - Birinder, Atishay, Nidhi, Mitchell, Charlie and Marlon - for being so supportive and willing to help out when I had questions or when I got stuck. I would especially like to thank my team lead Jarrett, who was quite posssibly the best team lead a first-term co-op could have - incredibly receptive to my ideas and supportive of my work term goals. I would also like to thank Kamran who was an excellent teacher for the first 4 months.</p>
         <p>Overall this work term has been an eye-opening experience for me in terms of discovering not only how software development works in the workplace, but how my skills translate to the workplace as well. The working experience in tech like Docker and Kubernetes is very valuable going forward.</p><br>
       </div>
     </section>
