link NCR page on main page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="subheading mb-3">NCR Waterloo</div>
             <img class="img-fluid mx-auto mb-2 " src="./img/NCRLogo.jpg" alt="">
             <p>This was my first co-op term, started at the end of my 2nd year.</p> 
-            <a href="./404.html" class="subheading mb-3">More</a></p> 
+            <a href="./NCR.html" class="subheading mb-3">More</a></p> 
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2019 - Present</span>
