update spacing; shorten spacing for NCR workterm page, leave homepage the same

--- a/NCR.html
+++ b/NCR.html
@@ -63,7 +63,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="ncr-work-term">
+    <section class="resume-section-main p-3 p-lg-5 d-flex justify-content-center" id="ncr-work-term">
       <div class="w-100">
         <!-- TODO: rewrite - with new spacing flow is clunky -->
         <h2 class="mb-5">NCR Work Term</h2>
@@ -83,7 +83,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="tech">
+    <section class="resume-section-main p-3 p-lg-5 d-flex justify-content-center" id="tech">
       <div class ="w-100">
         <h2 class="mb-5">Tech Stack</h2>
         <p>The position advertised Java as a primary language needed for the role. Java formed the backbone of the application being developed and ran the test suites.</p>
@@ -92,14 +92,14 @@
         <p>Cucumber test statements were connected to Java functions that performed the tests.</p>
         <img class="img-fluid mx-auto mb-2 " src="./img/GHERKIN_example.svg" alt="">
         <p></p>
-        <p>Databases such as Cassandra, Redis and Elasticsearch were used to store application data. Continuous Integration(CI) software was used to test builds when new code was merged.</p>
+        <p>Databases such as Cassandra, Redis and Elasticsearch were used to store application data. Continuous Integration (CI) software was used to test builds when new code was merged.</p>
 
         <p>Docker and Kubernetes were also used as part of the project infrastructure, forming the backbone of the project's microservice-based architecture. I had a single-node cluster that I used for development and testing.</p>
       </div>
     </section>
 
     <hr class="m-0">
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="challenges">
+    <section class="resume-section-main p-3 p-lg-5 d-flex justify-content-center" id="challenges">
       <div class="w-100">
         <h2 class="mb-5">Challenges</h2>
         <p>One of the biggest things to adjust to when working with a large codebase developed by multiple teams is the sheer number of interconnected, moving parts. While the goal would be to have individual, modular parts working together as a whole, reality is not as neatly divided. Seemingly minor, unrelated changes to one part of the codebase can have cascading effects that cause another part to break and can take a long time to debug.</p>
@@ -118,7 +118,7 @@
 
     <hr class="m-0">
     <!-- WORK IN PROGRESS -->
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="goals">
+    <section class="resume-section-main p-3 p-lg-5 d-flex justify-content-center" id="goals">
       <div class="w-100">
         <h2 class="mb-5">Goals</h2>
         <div class="goalAnswer">
@@ -165,7 +165,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="hackathon">
+    <section class="resume-section-main p-3 p-lg-5 d-flex justify-content-center" id="hackathon">
       <div class="w-100">
         <h2 class="mb-5">NCR Global Hackathon</h2>
         <p>At the end of July NCR ran a global 2-day hackathon to develop new ideas for prizes. I partnered with 3 other-co-op
@@ -184,7 +184,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="conclusion">
+    <section class="resume-section-main p-3 p-lg-5 d-flex justify-content-center" id="conclusion">
       <div class="w-100">
         <h2 class="mb-5">Conclusion</h2>
         <p>There were a couple of big takeaways I got from the past 8 months. Collaboration and communication skills are essential. When working on a new task or issue, thoroughly researching and understanding the problem is way more effective than blindly jumping into code. Last but not least, having an efficient and organized infrastructure and workflow is vital for any large-scale development.</p>
