--- a/UoGuelph.html
+++ b/UoGuelph.html
@@ -9,6 +9,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
+    <!-- FIXME: maybe package these locally so it's not doing a web query -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -20,6 +21,7 @@
 
 
 <body id="page-top">
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand" href="./index.html">Home</a>
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -35,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#ncr-work-term">Work Term</a>
+              <a class="nav-link js-scroll-trigger" href="#uog-work-term">Work Term</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#tech">Tech</a>
@@ -52,5 +54,32 @@
           </ul>
         </div>
       </nav>
+
+      <hr class="m-0">
+
+      <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="uog-work-term">
+        <div class="w-100">
+          <h2 class="mb-5">University of Guelph Work Term</h2>          
+
+          <h3>Role: Programmer/Analyst</h3>
+
+        </div>
+      </section>
+
+      <hr class="m-0">
+
+      <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="tech">
+        <div class="w-100">
+          <h2 class="mb-5">Tech Stack</h2>
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="goals">
+        <div class="w-100">
+          <h2 class="mb-5">Learning Goals</h2>
+        </div>
+      </section>
+
+
 </body>
 </html>
