Add animated scroll + right bar

--- a/UoGuelph.html
+++ b/UoGuelph.html
@@ -43,9 +43,6 @@
               <a class="nav-link js-scroll-trigger" href="#tech">Tech</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#challenges">Challenges</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#goals">Goals</a>
             </li>
             <li class="nav-item">
@@ -80,6 +77,15 @@
         </div>
       </section>
 
-
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="rightBar"></nav>
+      <!-- Bootstrap core JavaScript -->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    
+      <!-- Plugin JavaScript -->
+      <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    
+      <!-- Custom scripts for this template -->
+      <script src="js/resume.min.js"></script>
 </body>
 </html>
