Add thank-you to end of Conclusion section

--- a/UoGuelph.html
+++ b/UoGuelph.html
@@ -258,6 +258,8 @@
     <p>Overall this work term provided a lot of insight into how course content is created, and a lot of experience in
       independent,
       self-driven work - both of which are valuable going forward!</p>
+    <p>I want to thank Prof. Judi McCuaig for taking me on in this position, and all of the other co-op students I worked 
+    with this summer for making it a great experience!</p>
   </div>
 </section>
 
